# LaunchPadMiniLed

./: CMakeLists.txt  README.MD
Sources/: LedController.cpp  LedController.h  Main.cpp  MidiController.cpp  MidiController.h
Sources/Devices/: LaunchControl.cpp  LaunchControl.h
Sources/Include/: LedController.h
Sources/Objects/: Potard.cpp  Potard.h
